--- a/Dashboard/Pages/Counter.razor
+++ b/Dashboard/Pages/Counter.razor
@@ -4,7 +4,7 @@
 
 <p role="status">Current count: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Hit me!</button>
+<button class="btn btn-primary" @onclick="IncrementCount">Hit Me Now!</button>
 
 @code {
     private int currentCount = 0;
